--- a/less/modal.less
+++ b/less/modal.less
@@ -1068,3 +1068,69 @@
     }
   }
 }
+#syslogModalDialog-content {
+	.filters {
+		margin-top: 10px;
+		label {
+			color: #4d86e2;
+		}
+		textarea {
+			resize: none;
+		}
+		.scrollY {
+			max-height: 410px;
+			overflow-y: auto;
+		}
+	}
+	.relationships {
+		.group {
+			border: 1px solid #d9d9d9;
+			border-radius: 5px;
+			margin-top: 10px;
+			background-color: #e3f2f9;
+		}
+		.relationship {
+			margin-top: 10px;
+			margin-bottom: 10px;
+			width: 90%;
+			.up {
+				display: flex;
+				padding: 5px 5px;
+			}
+			.down {
+				padding: 5px 5px;
+				.table-100 {
+					width: 100%;
+				}
+				table {
+					border: 1px solid #CCCCCC;
+					border-radius: 5px;
+				}
+			}
+			.item {
+				margin-left: 10px;
+				label {
+					color: #4d86e2;
+				}
+				select {
+					width: 200px;
+				}
+			}
+			.fg-next {
+				margin-top: 30px;
+				margin-left: 10px;
+			}
+		}
+		.remove {
+			height: 30px;
+			width: 30px;
+			margin-top: 10px;
+			background-color: white;
+		}
+		.add {
+			height: 30px;
+			width: 30px;
+			margin-top: 10px;
+		}
+	}
+}
