--- a/less/app.less
+++ b/less/app.less
@@ -555,6 +555,9 @@ footer.footer {
 				padding: 5px 10px;
 				margin-top: 0;
 				margin-bottom: 0;
+				&.hide {
+					display: none;
+				}
 			}
 			label {
 				display: block;
