--- a/less/modal.less
+++ b/less/modal.less
@@ -153,10 +153,12 @@
 		padding: 20px 20px 15px 20px;
 	}
 	.json-data {
-		height: 345px;
 		overflow-y: auto;
 		border: 1px solid #ccc;
 		border-radius: 10px;
+		&.alert {
+			height: 380px;
+		}
 		& > li {
 			overflow: hidden;
 			padding: 5px 10px;
