Re-visit and update CSS styles for tables.

--- a/less/app.less
+++ b/less/app.less
@@ -84,12 +84,12 @@ footer.footer {
   .dropdown-margin {
     margin-left:50px;
   }
-  .table-100 {
-    width: 100%;
-    .c-table thead {
-      border-width: 0 0 1px 0;
-    }
-  }
+  // .table-100 {
+  //   width: 100%;
+  //   .c-table thead {
+  //     border-width: 0 0 1px 0;
+  //   }
+  // }
   .chart {
     flex-basis: 150px;
     height: 200px;
@@ -780,131 +780,131 @@ footer.footer {
 					overflow-x: auto;
 					white-space: nowrap;
 				}
-				.table-100 {
-					width: 100%;
-					thead th {
-						text-align: center;
-						padding-left: 30px;
-					}
-					tbody td {
-						padding-left: 30px;
-						span {
-							a {
-								color: #185e9e;
-								text-decoration: underline;
-							}
-							&.permit {
-								margin: 5px;
-								border: 1px solid #ccc;
-								border-radius: 90px;
-								background-color: #004d93;
-								color: white;
-								padding: 5px 10px;
-							}
-							&.link {
-								text-decoration: underline;
-								cursor: pointer;
-							}
-							&.blue {
-								color: #2164a0;
-							}
-							&.green {
-								color: #2fb046;
-								font-weight: bold;
-							}
-							&.orange {
-								color: #f7af3a;
-								font-weight: bold;
-							}
-							&.red {
-								color: #d1152e;
-								font-weight: bold;
-							}
-							&.task-count {
-								color: #185e9e;
-								font-weight: bold;
-								text-decoration: underline;
-								cursor: pointer;
-							}
-						}
-					}
-					.button {
-						text-align: center;
-						button {
-							margin-top: 5px;
-							margin-bottom: 5px;
-							padding-right: 25px;
-							padding-left: 15px;
-							background-color: #fff;
-							color: #585858;
-							&.status {
-								border: none;
-								background: none;
-								cursor: text;
-							}
-							i {
-								float: left;
-								padding-top: 2px;
-								font-size: 1.6em;
-							}
-							span {
-								float: right;
-								margin-left: 20px;
-								margin-top: 4px;
-								&.status {
-									margin-left: 5px;
-								}
-							}
-						}
-						& > div, & > span {
-							color: #a6a6a6;
-							font-size: .9em;
-						}
-						& > div > span {
-							display: inline-block;
-							margin-right: 5px;
-						}
-						& > span {
-							display: block;
-						}
-					}
-				}
-				.align-center {
-					thead th {
-						text-align: center;
-						padding-left: 10px;
-					}
-					tbody td {
-						text-align: center;
-						padding-left: 10px;
-						&.message,
-						&.payload,
-						&.options,
-						&.serviceName {
-							text-align: left;
-						}
-						&.payload {
-							cursor: pointer;
-						}
-						&.photo {
-							img {
-								width: 128px;
-								height: 75px;
-								cursor: pointer;
-							}
-						}
-						&.serviceName {
-							position: relative;
-							.fg-info {
-								position: relative;
-								top: 5px;
-							}
-						}
-						.add-padding {
-							padding-left: 10px;
-						}
-					}
-				}
+				// .table-100 {
+				// 	width: 100%;
+				// 	thead th {
+				// 		text-align: center;
+				// 		padding-left: 30px;
+				// 	}
+				// 	tbody td {
+				// 		padding-left: 30px;
+				// 		span {
+				// 			a {
+				// 				color: #185e9e;
+				// 				text-decoration: underline;
+				// 			}
+				// 			&.permit {
+				// 				margin: 5px;
+				// 				border: 1px solid #ccc;
+				// 				border-radius: 90px;
+				// 				background-color: #004d93;
+				// 				color: white;
+				// 				padding: 5px 10px;
+				// 			}
+				// 			&.link {
+				// 				text-decoration: underline;
+				// 				cursor: pointer;
+				// 			}
+				// 			&.blue {
+				// 				color: #2164a0;
+				// 			}
+				// 			&.green {
+				// 				color: #2fb046;
+				// 				font-weight: bold;
+				// 			}
+				// 			&.orange {
+				// 				color: #f7af3a;
+				// 				font-weight: bold;
+				// 			}
+				// 			&.red {
+				// 				color: #d1152e;
+				// 				font-weight: bold;
+				// 			}
+				// 			&.task-count {
+				// 				color: #185e9e;
+				// 				font-weight: bold;
+				// 				text-decoration: underline;
+				// 				cursor: pointer;
+				// 			}
+				// 		}
+				// 	}
+				// 	.button {
+				// 		text-align: center;
+				// 		button {
+				// 			margin-top: 5px;
+				// 			margin-bottom: 5px;
+				// 			padding-right: 25px;
+				// 			padding-left: 15px;
+				// 			background-color: #fff;
+				// 			color: #585858;
+				// 			&.status {
+				// 				border: none;
+				// 				background: none;
+				// 				cursor: text;
+				// 			}
+				// 			i {
+				// 				float: left;
+				// 				padding-top: 2px;
+				// 				font-size: 1.6em;
+				// 			}
+				// 			span {
+				// 				float: right;
+				// 				margin-left: 20px;
+				// 				margin-top: 4px;
+				// 				&.status {
+				// 					margin-left: 5px;
+				// 				}
+				// 			}
+				// 		}
+				// 		& > div, & > span {
+				// 			color: #a6a6a6;
+				// 			font-size: .9em;
+				// 		}
+				// 		& > div > span {
+				// 			display: inline-block;
+				// 			margin-right: 5px;
+				// 		}
+				// 		& > span {
+				// 			display: block;
+				// 		}
+				// 	}
+				// }
+				// .align-center {
+				// 	thead th {
+				// 		text-align: center;
+				// 		padding-left: 10px;
+				// 	}
+				// 	tbody td {
+				// 		text-align: center;
+				// 		padding-left: 10px;
+				// 		&.message,
+				// 		&.payload,
+				// 		&.options,
+				// 		&.serviceName {
+				// 			text-align: left;
+				// 		}
+				// 		&.payload {
+				// 			cursor: pointer;
+				// 		}
+				// 		&.photo {
+				// 			img {
+				// 				width: 128px;
+				// 				height: 75px;
+				// 				cursor: pointer;
+				// 			}
+				// 		}
+				// 		&.serviceName {
+				// 			position: relative;
+				// 			.fg-info {
+				// 				position: relative;
+				// 				top: 5px;
+				// 			}
+				// 		}
+				// 		.add-padding {
+				// 			padding-left: 10px;
+				// 		}
+				// 	}
+				// }
 				footer {
 					padding: 20px 0;
 					.dropdown-margin {
@@ -916,19 +916,14 @@ footer.footer {
 	}
 	.main-table {
 		width: 100%;
-		&.main {
-			tbody tr {
-				height: 45px;
-			}
-		}
 		&.overflow-scroll {
 			overflow-x: auto;
 		}
 		thead th {
 			text-align: center;
-			padding-left: 30px;
 		}
 		tbody tr {
+			height: 45px;
 			&.red {
 				color: #fff;
 				background-color: #B80000;
@@ -995,6 +990,7 @@ footer.footer {
 		}
 		tbody td {
 			text-align: left;
+			padding-left: 30px;
 			cursor: pointer;
 			&.align-center {
 				text-align: center;
@@ -1011,19 +1007,101 @@ footer.footer {
 			&._tableMenu_ {
 				width: 1px;
 			}
-			&._eventDttm_ {
-				text-align: center;
-			}
 			&.Severity {
 				span {
 					display: block;
-					width: 50%;
-					margin-left: 45px;
-					padding: 2px;
 					color: #fff;
+					width: 50%;
+					margin-left: 20px;
+					padding: 2px;
 					text-align: center;
 					border-radius: 10px;
 				}
+			}
+			.button {
+				//text-align: center;
+				button {
+					margin-top: 5px;
+					margin-bottom: 5px;
+					padding-right: 25px;
+					padding-left: 15px;
+					background-color: #fff;
+					color: #585858;
+					&.status {
+						border: none;
+						background: none;
+						cursor: text;
+					}
+					i {
+						float: left;
+						padding-top: 2px;
+						font-size: 1.6em;
+					}
+					span {
+						float: right;
+						margin-left: 20px;
+						margin-top: 4px;
+						&.status {
+							margin-left: 5px;
+						}
+					}
+				}
+				& > div, & > span {
+					color: #a6a6a6;
+					font-size: .9em;
+				}
+				& > div > span {
+					display: inline-block;
+					margin-right: 5px;
+				}
+				& > span {
+					display: block;
+				}
+			}
+			span {
+				a {
+					color: #185e9e;
+					text-decoration: underline;
+				}
+				&.permit {
+					margin: 5px;
+					border: 1px solid #ccc;
+					border-radius: 90px;
+					background-color: #004d93;
+					color: white;
+					padding: 5px 10px;
+				}
+				&.link {
+					text-decoration: underline;
+					cursor: pointer;
+				}
+				&.blue {
+					color: #2164a0;
+				}
+				&.green {
+					color: #2fb046;
+					font-weight: bold;
+				}
+				&.orange {
+					color: #f7af3a;
+					font-weight: bold;
+				}
+				&.red {
+					color: #d1152e;
+					font-weight: bold;
+				}
+				&.task-count {
+					color: #185e9e;
+					font-weight: bold;
+					text-decoration: underline;
+					cursor: pointer;
+				}
+			}
+		}
+		&.align-center {
+			tbody td {
+				text-align: center;
+				padding-left: 0;
 			}
 		}
 		&.no-pointer {
