Update CSS styles and layout across all sections based on the new designs.

--- a/less/modal.less
+++ b/less/modal.less
@@ -735,6 +735,7 @@
 	width: 965px;
 	.main-table {
 		border-radius: 5px;
+		width: 100%;
 		overflow: hidden;
 		thead tr {
 			color: #185e9e;
@@ -764,11 +765,12 @@
 		}
 		.severity {
 			display: block;
-			width: 35%;
+			width: 70px;
 			padding: 2px;
 			color: #fff;
 			border-radius: 10px;
 			margin: 0 auto;
+			text-align: center;
 		}
 	}
 	.alert-info {
