Implement the floor map for Network Inventory basic IP info.

--- a/less/app.less
+++ b/less/app.less
@@ -361,6 +361,7 @@ footer.footer {
 		}
 		.c-gis {
 			min-height: 500px;
+			& > .content > .base-layers,
 			.actions {
 				display: none;
 			}
